# warning-bot

./: .gitignore  pyproject.toml
src/warning_bot/: main.py
src/warning_bot/config/: __init__.py  config.py
src/warning_bot/hendlers/: hendler.py
src/warning_bot/sourse/: mongo.py
